<resources>
    <string name="app_name">AUDL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">AUDL Menu Opened</string>
    <string name="drawer_close">AUDL Menu Closed</string>
    <string name="news_header">League News</string>
    <string name="labelWins">W</string>
    <string name="labelLosses">L</string>
    <string name="labelPointsDiff">PD</string>
    <string name="ServerURL">http://ec2-54-186-184-48.us-west-2.compute.amazonaws.com:4000</string>
    <string name="UltimateTeamStatsURL">http://www.ultimate-numbers.com/team/</string>
    <string name="topPlayers">TOP PLAYERS</string>
    <string name="goals">MOST GOALS</string>
    <string name="assists">MOST ASSISTS </string>
    <string name="drops">MOST DROPS</string>
    <string name="throwaways">MOST TAs</string>
    <string name="Ds">MOST Ds</string>
    <string name="finals">FINAL</string>
    <string name="graphUnavalaible">Graph is currently unavailable</string>
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >News</item>
        <item >Teams</item>
        <item >Now</item>
        <item >Standings</item>
        <item >Scores</item>
        <item >Schedule</item>
        <item >Videos</item>
        <item >Statistics</item>
        <item >Settings</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string-array name="faqQuestions">
        <item >Where can I see news and the recent AUDL Headlines</item>
        <item >Where can I find out more about a specific team that I like</item>
        <item >If I want to see what the AUDL is saying at this instant, where do I go</item>
        <item >Can I watch games on the AUDL Mobile App</item>
        <item >I like to see a little bit of everything, is there a place for me</item>
        <item >I’m a stats fan. Where can I go to find out who the best players are</item>
        <item >I want to see where the teams stand at this point in the season, where do I go</item>
        <item >I missed out on a few games in the last couple weeks. Where can I go to see who won and who lost</item>
        <item >I\&apos;m interested in finding out who the best player is on a particular team. Is there a way to do this</item>
        <item >I don\&apos;t know anything about Ultimate. Is there a place for me to go</item>
        <item >I hate this mobile app, who can I talk to about this abomination</item>
        <item >I love this mobile app, who can I talk to about this heavenly piece of software</item>
    </string-array>
    <string-array name="faqAnswers">
        <item >The News section! Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click News. All the most recent AUDL headlines will be right there!</item>
        <item >The Teams section! Open up the app\&apos; navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Teams. Here, you\&apos;ll find a complete listing of every team in the AUDL. Click on any one of them to find out more about their players and their upcoming games!</item>
        <item >We made the Now section just for you. Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Now. The 20 most recent tweets made by the AUDL will always be here. Just revisit the page every time you want to refresh!</item>
        <item >Yes you can! Some games are recorded and released onto YouTube for public viewing. We have these games, along with promo vids, rules reviews, and other things all in our Videos section. All you have to do is open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Videos. Then watch as many games you\&apos;d like! Caution: Standard data rates apply.</item>
        <item >The Home page is made just for you. Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Home. Here, you\&apos;ll see a little bit of News, a couple of the upcoming games, a few videos, and a little bit of everything else!</item>
        <item >If you\&apos;re interested in stats about a specific team, check out the Teams section. Otherwise, if you want to see the best players in each major stats category, Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Statistics. Here, you can find out who ranks the best in everything from Drops, D\&apos;s, to PMC\&apos;s!</item>
        <item >The Standings page does exactly what it sounds like, it shows you where all the AUDL teams stand at this very moment in the season. Simply open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Standings. From here, slide sideways to check out the current standings for each division.</item>
        <item >The Scores page is just for you! Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Scores, and you\&apos;re all set. Remember, if a game hasn\&apos;t been played yet, the scores will sometimes be marked 0 0. I mean, has a game ever had 0 points on either side?</item>
        <item >Well, it\&apos;s hard to say who\&apos;s the best player all around, but the team stats provides a little bit of insight into this question. Open up the app\&apos;s navigation menu by clicking on the AUDL Logo at the top left corner of your screen (or slide right from the left edge of your screen) and click Teams. From here, select the team of your interest, and then slide through the tabs in the screen until you get to the stats tab. Here, you\&apos;ll get to see the best ranked players within a particular team in each stats category.</item>
        <item >Of course! Just open up your browser, and go to http://theaudl.com/about/ultimate. Here, you\&apos;ll find some basic info about how gameplay works. If you\&apos;re less initiated, just hang tight, version 3 of this mobile app will have rules along with the FAQ!</item>
        <item >We\&apos;re extremely sorry for any inconvenience the AUDL mobile app may have caused you. Our development team is actively upgrading our application, and we\&apos;d love to hear any suggestions you may have for us on how we could improve. Simply click on the Send Feedback in the Settings page, and let us know what you think. Otherwise, you can always email us at audlappdevteam@gmail.com.</item>
        <item >We\&apos;d love to hear all the praise you have for our mobile app! Click on Send Feedback in the Settings page, and feel free to go off on everything we did right. Also, do us a big favor by giving us a Five Star Rating on the Play Store, or by Tweeting about how awesome our app is with the hashtag #AUDLAppDevTeam.</item>
    </string-array>
</resources>